--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.6",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-date-picker": "^4.2.12",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "^3.1.0",
     "react-native-safe-area-context": "^4.5.1",
