--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.21.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.6",
     "formik": "^2.2.9",
+    "mobx": "^6.9.0",
+    "mobx-react": "^7.6.0",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.7",
@@ -24,6 +27,7 @@
     "react-native-reanimated": "^3.1.0",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
+    "react-native-toast-message": "^2.1.6",
     "react-native-vector-icons": "^9.2.0",
     "yup": "^1.1.1"
   },
