--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,7 @@
 {
+  "compilerOptions": {
+      "experimentalDecorators": true,
+      "useDefineForClassFields": true
+  },
   "extends": "@tsconfig/react-native/tsconfig.json"
 }
