--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.21.0",
+    "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.6",
     "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
     "mobx": "^6.9.0",
     "mobx-react": "^7.6.0",
     "moment": "^2.29.4",
