--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.6",
+    "base64-js": "^1.5.1",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
     "mobx": "^6.9.0",
@@ -27,6 +28,7 @@
     "react-native": "0.71.7",
     "react-native-date-picker": "^4.2.12",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-image-picker": "^5.3.1",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.1.0",
     "react-native-safe-area-context": "^4.5.1",
