--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -170,7 +170,7 @@ dependencies {
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
 
 project.ext.vectoricons = [
-    iconFontNames: [ 'Ionicons.ttf', 'FontAwesome5.ttf', 'FontAwesome.ttf', 'AntDesign.ttf', 'MaterialIcons.ttf', 'EvilIcons.ttf' ] // Name of the font files you want to copy
+    iconFontNames: [ 'Feather.ttf', 'Ionicons.ttf', 'FontAwesome5.ttf', 'FontAwesome.ttf', 'AntDesign.ttf', 'MaterialIcons.ttf', 'EvilIcons.ttf' ] // Name of the font files you want to copy
 ]
 
 apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
