--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "react-native-date-picker": "^4.2.12",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-image-crop-picker": "^0.39.0",
     "react-native-image-picker": "^5.3.1",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.1.0",
+    "react-native-reanimated-carousel": "^3.3.2",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-toast-message": "^2.1.6",
     "react-native-vector-icons": "^9.2.0",
     "yup": "^1.1.1"
@@ -46,6 +49,7 @@
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
+    "@types/react-native-snap-carousel": "^3.8.5",
     "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
