--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.21.0",
     "@react-native-async-storage/async-storage": "^1.18.1",
+    "@react-native-community/checkbox": "^0.5.15",
     "@react-native-community/slider": "^4.4.2",
     "@react-native-google-signin/google-signin": "^9.0.2",
     "@react-navigation/bottom-tabs": "^6.5.7",
@@ -32,6 +33,7 @@
     "react-native-gesture-handler": "^2.9.0",
     "react-native-image-crop-picker": "^0.39.0",
     "react-native-image-picker": "^5.3.1",
+    "react-native-input-spinner": "^1.8.1",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.1.0",
     "react-native-reanimated-carousel": "^3.3.2",
