Modifie screens layout

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,12 @@
   "compilerOptions": {
       "experimentalDecorators": true,
       "useDefineForClassFields": true,
-      "lib": [
-        "DOM",
-        "DOM.Iterable",
-        "ES5",
-        "ES6"
-      ]
+      // "lib": [
+      //   "DOM",
+      //   "DOM.Iterable",
+      //   "ES5",
+      //   "ES6"
+      // ]
   },
   "extends": "@tsconfig/react-native/tsconfig.json"
 }
