--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-image-picker": "^5.3.1",
     "react-native-input-spinner": "^1.8.1",
     "react-native-modal": "^13.0.1",
+    "react-native-numeric-input": "^1.9.1",
     "react-native-reanimated": "^3.1.0",
     "react-native-reanimated-carousel": "^3.3.2",
     "react-native-safe-area-context": "^4.5.1",
