--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-google-signin/google-signin": "^9.0.2",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
+    "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.6",
@@ -36,11 +37,13 @@
     "react-native-input-spinner": "^1.8.1",
     "react-native-modal": "^13.0.1",
     "react-native-numeric-input": "^1.9.1",
+    "react-native-pager-view": "^6.2.0",
     "react-native-reanimated": "^3.1.0",
     "react-native-reanimated-carousel": "^3.3.2",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-tab-view": "^3.5.1",
     "react-native-toast-message": "^2.1.6",
     "react-native-vector-icons": "^9.2.0",
     "yup": "^1.1.1"
