--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.21.0",
+    "@notifee/react-native": "^7.7.1",
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-community/checkbox": "^0.5.15",
     "@react-native-community/slider": "^4.4.2",
+    "@react-native-firebase/app": "^17.5.0",
+    "@react-native-firebase/messaging": "^17.5.0",
     "@react-native-google-signin/google-signin": "^9.0.2",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
@@ -29,6 +32,7 @@
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-camera": "^4.2.1",
     "react-native-date-picker": "^4.2.12",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.9.0",
@@ -38,6 +42,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-numeric-input": "^1.9.1",
     "react-native-pager-view": "^6.2.0",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-reanimated": "^3.1.0",
     "react-native-reanimated-carousel": "^3.3.2",
     "react-native-safe-area-context": "^4.5.1",
@@ -46,6 +51,8 @@
     "react-native-tab-view": "^3.5.1",
     "react-native-toast-message": "^2.1.6",
     "react-native-vector-icons": "^9.2.0",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
     "yup": "^1.1.1"
   },
   "devDependencies": {
