--- a/android/build.gradle
+++ b/android/build.gradle
@@ -11,6 +11,8 @@ buildscript {
         ndkVersion = "23.1.7779620"
 
         googlePlayServicesAuthVersion = "19.2.0"
+
+        kotlinVersion = '1.6.20'
     }
     repositories {
         google()
