--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.6",
     "base64-js": "^1.5.1",
+    "deprecated-react-native-prop-types": "^4.1.0",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
     "mobx": "^6.9.0",
@@ -51,8 +52,10 @@
     "react-native-tab-view": "^3.5.1",
     "react-native-toast-message": "^2.1.6",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-vision-camera": "^2.15.4",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
+    "vision-camera-code-scanner": "^0.2.0",
     "yup": "^1.1.1"
   },
   "devDependencies": {
