--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@sendbird/chat": "^4.9.1",
+    "@sendbird/uikit-react-native": "^2.5.0",
     "axios": "^1.3.6",
     "base64-js": "^1.5.1",
     "deprecated-react-native-prop-types": "^4.1.0",
@@ -53,6 +55,7 @@
     "react-native-toast-message": "^2.1.6",
     "react-native-vector-icons": "^9.2.0",
     "react-native-vision-camera": "^2.15.4",
+    "sendbird": "^3.1.32",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
     "vision-camera-code-scanner": "^0.2.0",
