--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@sendbird/chat": "^4.9.1",
-    "@sendbird/uikit-react-native": "^2.5.0",
     "axios": "^1.3.6",
     "base64-js": "^1.5.1",
     "deprecated-react-native-prop-types": "^4.1.0",
@@ -39,6 +38,7 @@
     "react-native-date-picker": "^4.2.12",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-gifted-chat": "^2.3.0",
     "react-native-image-crop-picker": "^0.39.0",
     "react-native-image-picker": "^5.3.1",
     "react-native-input-spinner": "^1.8.1",
@@ -55,7 +55,6 @@
     "react-native-toast-message": "^2.1.6",
     "react-native-vector-icons": "^9.2.0",
     "react-native-vision-camera": "^2.15.4",
-    "sendbird": "^3.1.32",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
     "vision-camera-code-scanner": "^0.2.0",
