--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-firebase/app": "^17.5.0",
     "@react-native-firebase/messaging": "^17.5.0",
     "@react-native-google-signin/google-signin": "^9.0.2",
+    "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/material-top-tabs": "^6.6.2",
@@ -36,6 +37,7 @@
     "react-native": "0.71.7",
     "react-native-camera": "^4.2.1",
     "react-native-date-picker": "^4.2.12",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-gifted-chat": "^2.3.0",
