update: working progress

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
-      "experimentalDecorators": true,
-      "useDefineForClassFields": true,
-      // "lib": [
-      //   "DOM",
-      //   "DOM.Iterable",
-      //   "ES5",
-      //   "ES6"
-      // ]
+    "experimentalDecorators": true,
+    "useDefineForClassFields": true
+    // "lib": [
+    //   "DOM",
+    //   "DOM.Iterable",
+    //   "ES5",
+    //   "ES6"
+    // ]
   },
   "extends": "@tsconfig/react-native/tsconfig.json"
 }
