--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@notifee/react-native": "^7.7.1",
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-community/checkbox": "^0.5.15",
+    "@react-native-community/progress-view": "^1.4.1",
     "@react-native-community/slider": "^4.4.2",
     "@react-native-firebase/app": "^17.5.0",
     "@react-native-firebase/messaging": "^17.5.0",
