--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-native-numeric-input": "^1.9.1",
     "react-native-pager-view": "^6.2.0",
     "react-native-qrcode-scanner": "^1.5.5",
+    "react-native-radio-buttons-group": "^3.0.2",
     "react-native-reanimated": "^3.1.0",
     "react-native-reanimated-carousel": "^3.3.2",
     "react-native-safe-area-context": "^4.5.1",
