--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-big-calendar": "^3.4.2",
     "react-native-camera": "^4.2.1",
     "react-native-date-picker": "^4.2.12",
     "react-native-dropdown-picker": "^5.4.6",
