--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-big-calendar": "^3.4.2",
+    "react-native-calendars": "^1.1299.0",
     "react-native-camera": "^4.2.1",
     "react-native-date-picker": "^4.2.12",
     "react-native-dropdown-picker": "^5.4.6",
