feat: search goods

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "deprecated-react-native-prop-types": "^4.1.0",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "mobx": "^6.9.0",
     "mobx-react": "^7.6.0",
     "moment": "^2.29.4",
@@ -73,6 +74,7 @@
     "@react-native-community/eslint-config": "^3.2.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
+    "@types/lodash": "^4.14.196",
     "@types/react": "^18.0.24",
     "@types/react-native-snap-carousel": "^3.8.5",
     "@types/react-native-vector-icons": "^6.4.13",
