--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-camera": "^4.2.1",
     "react-native-date-picker": "^4.2.12",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-element-dropdown": "^2.9.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-gifted-chat": "^2.3.0",
