--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mobx": "^6.9.0",
     "mobx-react": "^7.6.0",
     "moment": "^2.29.4",
+    "qs": "^6.11.2",
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-big-calendar": "^3.4.2",
@@ -76,6 +77,7 @@
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
     "@types/lodash": "^4.14.196",
+    "@types/qs": "^6.9.7",
     "@types/react": "^18.0.24",
     "@types/react-native-snap-carousel": "^3.8.5",
     "@types/react-native-vector-icons": "^6.4.13",
