--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,21 @@
 {
-  "cSpell.words": ["Formik", "mgmt"]
+  "cSpell.words": [
+    "addusergroup",
+    "chatbubble",
+    "ellipsize",
+    "Formik",
+    "IJWT",
+    "Ionicons",
+    "lightorange",
+    "Megoo",
+    "Memb",
+    "mgmt",
+    "noofmemb",
+    "notifee",
+    "pkgs",
+    "Sendbird",
+    "shoppingcart",
+    "Signin",
+    "Todos"
+  ]
 }
