--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android --port=9001",
+    "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "react-native start --port=9001",
+    "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
@@ -61,10 +61,10 @@
     "react-native-root-toast": "^3.4.1",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
-    "react-native-snap-carousel": "^3.9.1",
+    "react-native-snap-carousel": "^1.3.1",
     "react-native-tab-view": "^3.5.1",
     "react-native-toast-message": "^2.1.6",
-    "react-native-vector-icons": "^9.2.0",
+    "react-native-vector-icons": "^10.0.0",
     "react-native-vision-camera": "^2.15.4",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
